--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,8 @@ h1,h2 {
 #container {
     display: block;
     width: 100%;
-    background-color: #7C4E29;
-    border-bottom: 2px solid #E6B17E;
+    background-color: #443627;
+    border-bottom: 2px solid #7C4E29;
     max-height: 20%;
     position: fixed;
     z-index: 800;
@@ -61,19 +61,20 @@ h1,h2 {
 #container nav a {
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 110%;
+    font-size: 85%;
+    font-weight: bold;
     color: #E6B17E;
     padding: 5px 20px;
     border: 1px solid transparent;
     transition: 1s ease;
 }
 #container nav a:hover {
-    background-color: #E6B17E;
-    color: #7C4E29;
+    background-color: #725E54;
+    color: #D5DCF9;
 }
 .active {
     background-color: rgba(217,188,169, 0.6);
-    color: #7C4E29;
+    color: #292F36;
     border: 1px solid transparent; 
 }
 /* main image section */
@@ -99,8 +100,9 @@ h1,h2 {
     width: 60%;
     height: 65%;
     font-size: 120%;
+    font-weight: bold;
     word-wrap: break-word;
-    background-color: rgba(217,188,169, 0.6);
+    background-color: rgba(217,188,169, 0.7);
     text-align: center;
     padding: 10px 10px;
     margin-left: 20%;
@@ -118,11 +120,10 @@ h1,h2 {
 }
 #welcome > h1 {
     font-size: 280%;
-    text-shadow: 4px 2px #E6B17E;
 }
 #welcome > h1,h3 {
-    color: #7C4E29;
-    font-weight: bolder;
+    color: #292F36;
+    font-weight: bold;
 }
 
 /* works section */
@@ -134,13 +135,13 @@ h1,h2 {
 
 }
 #works  p {
-    font-weight: bolder;
+    font-weight: bold;
     font-size: 110%;
-    color: #7C4E29;
+    color: #292F36;
 }
 #works h2,h3 {
-    font-size: 130%;
-    color: #7C4E29;
+    font-size: 110%;
+    color: #292F36;
     transform: translate(0);
     text-align: center;
 }
@@ -152,7 +153,7 @@ h1,h2 {
 .content > h2 {
     text-transform: uppercase;
     font-size: 150%;
-    color: #7C4E29; 
+    color: #292F36; 
     margin-bottom: 15px;
     margin-top: 35px;
     text-align: center;
@@ -164,18 +165,18 @@ h1,h2 {
     display: block;
     height: 180px;
     position: relative;
-    background-color: #E6B17E;
+    background-color: rgba(217,188,169, 0.7);
     opacity: 1;
    
 }
 .card i {
     font-size: 200%;
     font-weight: bold;
-    color: #7C4E29;
+    color: #292F36;
 }
 
 .card > h3 {
-    font-size: 200%;
+    font-size: 120%;
     font-weight: bold;
     padding-bottom: 10px;
 }
@@ -206,14 +207,17 @@ h1,h2 {
 .card .text:hover{
     opacity: 1;
 }
-
+.text {
+    text-align: center;
+    font-size: 75%;
+    font-weight: bolder;
+}
 #sayings {
     width: 100%;
     display: block;
     align-items: center;
     margin-left: 4%;
-    margin-right: 4%;
-    /* margin: 0 auto; */
+    margin-right: 4%;  
 }
 .persons {
     text-align: center;
@@ -266,8 +270,7 @@ h1,h2 {
     padding: 10px 10px;
     margin-top: 10px;
     width: 40%;
-    background-color: #7C4E29;
-    border-right: 2px solid #E6B17E;
+    background-color: rgba(217,188,169, 0.7);
     display: block;
     height: 300px;
     float: left;
@@ -282,14 +285,14 @@ h1,h2 {
     margin-bottom: 10px;
     margin-top: 10px;
     margin-left: 10px;
-    color: #E6B17E;
+    color: #292F36;
 }
 #times > p {
     text-align: left;
     display: block;
     font-weight: 400;
     line-height: 28px;
-    color: #E6B17E;
+    color: #292F36;
     margin-left: 10px;
     margin-top: 10px;
 }
@@ -300,7 +303,7 @@ h1,h2 {
     padding: 10px 10px;
     width: 60%;
     height: 300px;
-    background-color: #7C4E29;
+    background-color: #292F36;
     background-image: url(../images/lamad.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -335,7 +338,7 @@ h1,h2 {
     text-align: center;
 }
 #top  i {
-    color: #7C4E29;
+    color: #292F36;
     font-size: 250%;
     
     
@@ -352,7 +355,7 @@ h1,h2 {
 #foot p {
     font-weight: bold;
     font-size: 150%;
-    color: #7C4E29;
+    color: #292F36;
     text-align: center;
 }
 .social-links {
@@ -363,7 +366,7 @@ h1,h2 {
 }
 .social-links i {
     font-size: 160%;
-    color: #7C4E29;
+    color: #292F36;
     margin:  1%;
     padding: 5%;
 }
@@ -578,9 +581,3 @@ h1,h2 {
     }
     
 }
-
-
-
-
-
-
