--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -505,9 +505,16 @@ h1,h2 {
     margin-left: 1%;
     margin-right: 1%;
 }
-#services .content {
-    margin-top: 15%;
+#dress-type {
+    margin-top: 50px;
     background-color: #fafafa;
+    margin-bottom: 50px;
+}
+#our-services {
+    width: 100%;
+    margin-top: 100px;
+    height: 300px;
+    background-color: rgba(217,188,169, 0.5);
 }
 #wedding-dress,#prom-dress,#pageant-dress,#suits {
     position: relative;
@@ -547,10 +554,11 @@ h1,h2 {
     position:absolute;
     bottom: -30px;
     text-align: center;
-    font-size: 120%;
+    font-size: 110%;
+    letter-spacing: 2px;
     font-weight: bold;
     text-transform: uppercase;
-    color: #725E54;
+    color: #292F36;
 }
 /* contact page */
 #contact-page {
