--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ h1,h2 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
     position: absolute;
-    top: 90%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%,80%);
 }
@@ -300,8 +300,8 @@ h1,h2 {
     border-radius: 50%;
 }
 
-/* about us */
-#about-us {
+/* buisness hours */
+#buisness-hours {
     width: 100%;
     margin-top: 10px;
     transform: translate(0);
@@ -346,12 +346,12 @@ h1,h2 {
     width: 60%;
     height: 300px;
     background-color: #292F36;
-    background-image: url(../images/lamad.png);
+    background-image: url('../images/lamad.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
 }
-
+/* footer */
 #foot {
     clear: both;
     display:block;
@@ -360,7 +360,14 @@ h1,h2 {
     align-items: center;
     margin: 0 auto;
 }
-/* go to top caret */
+#foot p {
+    font-weight: bold;
+    font-size: 110%;
+    color: #292F36;
+    text-align: center;
+}
+
+/* go to top icon */
 #top {
     text-decoration: none;
     align-items: center;
@@ -397,12 +404,8 @@ h1,h2 {
     visibility: hidden;
     
 }
-#foot p {
-    font-weight: bold;
-    font-size: 110%;
-    color: #292F36;
-    text-align: center;
-}
+/* social icons */
+
 .social-links {
     text-align: center;
 }
@@ -449,6 +452,7 @@ h1,h2 {
     margin-bottom:20px;
     
 }
+/* newsletter section */
 #newsletter {
     clear: both;
     width: 100%;
@@ -459,30 +463,31 @@ h1,h2 {
 }
 #news {
     height: 150px;
-    width: 100%;
     margin-top:15%;
     background-color: rgba(217,188,169, 0.7);
+    margin-left: 5%;
+    margin-right: 5%;
 }
 #news form input {
-    width: 60%;
+    width: 40%;
     height: 40px;
     margin-top: 10px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 30%;
+    margin-right: 30%;
     border-radius: 5px;
     text-align: center;
     font-size: 150%;
     color: #292F36;
 }
 #news form button {
-    margin-left: 40%;
-    margin-right: 40%;
+    margin-left: 45%;
+    margin-right: 45%;
     margin-top:18px;
     border: 1px solid #fafafa;
     background-color: #292F36;
     color: #D5DCF9;
     border-radius: 20px;
-    font-size:130%;
+    font-size:120%;
     text-transform: uppercase;
     padding: 10px 20px;
 }
@@ -510,12 +515,7 @@ h1,h2 {
     background-color: #fafafa;
     margin-bottom: 50px;
 }
-#our-services {
-    width: 100%;
-    margin-top: 100px;
-    height: 300px;
-    background-color: rgba(217,188,169, 0.5);
-}
+
 #wedding-dress,#prom-dress,#pageant-dress,#suits {
     position: relative;
     width: 23%;
@@ -560,6 +560,90 @@ h1,h2 {
     text-transform: uppercase;
     color: #292F36;
 }
+
+#our-services {
+    width: 100%;
+    margin-top: 100px;
+    height: 300px;
+    background-color: transparent;
+}
+
+
+#newly-married{
+    float: left;
+    clear: both;
+    width: 50%;
+    height: auto;
+}
+#newly-married img {
+    width: 100%;
+    height: auto;
+}
+#service-detail {
+    float: right;
+    width: 50%;
+    height: auto;
+    margin-left: 5px;
+    padding-right: 5px;
+    /* margin-right: 5px; */
+}
+.accordion {
+    width: 45%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    margin: 0 auto;
+    
+    overflow: hidden;
+    background-color: rgba(217,188,169, 0.6);
+}
+.accordion__label, .accordion__content{
+    padding: 14px 20px;
+}
+.accordion__label{
+    display: block;
+    color: #292F36;
+    font-weight: bold;
+    cursor: pointer;
+    position: relative;
+    transition: background-color 0.1s;
+}
+.accordion__label:hover{
+    background-color: rgba(0, 0, 0, 0.1);
+}
+.accordion-content{
+    background: white;
+    line-height: 1.6;
+    font-size: 1.2em;
+    display: none;
+}
+.accordion div #alteration{
+    display: none;
+}
+#alteration:checked ~ .accordion-content{
+    display: block;
+}
+.accordion div #how{
+    display: none;
+}
+#how:checked ~ .accordion-content{
+    display: block;
+}
+.accordion div #cost{
+    display: none;
+}
+#cost:checked ~ .accordion-content{
+    display: block;
+}
+.accordion div #fittings{
+    display: none;
+}
+#fittings:checked ~ .accordion-content{
+    display: block;
+}
+
+
+
+ 
+
 /* contact page */
 #contact-page {
     width: 100%;
@@ -568,7 +652,7 @@ h1,h2 {
 }
 #contact-image {
     width: 100%;
-    background-image: url(../images/tailor.jpg);
+    background-image: url('../images/tailor.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -693,6 +777,13 @@ h1,h2 {
 
 /* for screen width less than or equal to 950px */
 @media screen and (max-width: 950px) {
+    /* global */
+    .info {
+        font-size: 200%;
+        top: 40%;
+        justify-content: center;
+    }
+    /* header & navigation */
     #container #logo img {
         width: 30%;
         max-height: 18%;
@@ -701,22 +792,23 @@ h1,h2 {
         float: left;
         margin-top: 25px;
         margin-right: -150px;
-        /* padding: 1% 3%; */
-        /* letter-spacing: 1px; */
     }
     #container nav li {
         margin-right: 0;
         margin-bottom: 2px;
-        margin-left: -18spx;
+        margin-left: -18px;
     }
     #container nav a {
         font-size: 65%;
         padding: 3px 12px;
     }
+    /* welcome */
     #welcome {
         height: 40%;
+        top: 25%;
+        font-size: 90%;
     }
-
+    /* works */
     #left-content,#right-content {
         width: 100%;
         padding: 0;
@@ -729,14 +821,26 @@ h1,h2 {
         width: 100%;
         padding: 0;
     }
-    #welcome {
-        width: 60%;
-        max-height: 40%;
-        font-size: 50%;
-        top: 55%;
+    /* what people say */
+    #person1,#person2,#person3,#person4 {
+        float: left;
+        width: 100%;
+        margin-bottom: 5px;
     }
+    /* buisness hours */
     #times,#deviz {
         width: 100%;
+        float: left;
+    }
+    #how-we-started {
+        width: 100%;
+        float: left;
+        text-align: center;
+        padding: 5px 5px;
+        margin-bottom: 5px;
+    }
+    #group {
+        width:100%;
         float: left;
     }
     #contact,#contact-form {
@@ -748,6 +852,58 @@ h1,h2 {
     }
     #contact-form textarea {
         width: 80%;
+    }
+    
+}
+/* screen up to 360px */
+@media screen and (max-width: 360px) {
+    #container #logo img {
+        width: 20%;
+        max-height: 12%;
+    }
+    #container nav {
+        float: left;
+        margin-top: 15px;
+        margin-right: -80px;
+        /* padding: 1% 3%; */
+        /* letter-spacing: 1px; */
+    }
+    #container nav li {
+        margin-right: 0;
+        margin-bottom: 2px;
+        margin-left: -10px;
+    }
+    #container nav a {
+        font-size: 50%;
+        padding: 1px 8px;
+    }
+    #welcome {
+        width: 60%;
+        height: 40%;
+        top: 35%;
+    }
+    #person1,#person2,#person3,#person4 {
+        float: left;
+        width: 100%;
+        margin-bottom: 5px;
+    }
+    #foot p {
+        font-weight: bold;
+        font-size: 90%;
+        color: #292F36;
+        text-align: center;
+    }
+}
+@media screen and (max-width: 280px) {
+    #welcome {
+        width: 60%;
+        height: 35%;
+        top: 30%;
+        font-size: 70%;
+    }
+    #foot p {
+        font-size: 60%;
+        margin-bottom: 3px;
     }
     
 }
