--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
     font-weight: 300;
     color: #3a3a3a;
 }
+
 /* Global */
 
 h1,h2 {
@@ -34,6 +35,7 @@ h1,h2 {
 }
 #container {
     display: block;
+    justify-content: center;
     width: 100%;
     background-color: #292F36;;
     border-bottom: 2px solid #7C4E29;
@@ -45,6 +47,7 @@ h1,h2 {
     
 }
 
+
 /* header,logo and navigation */
 #container #logo img {
     float: left;
@@ -52,6 +55,7 @@ h1,h2 {
     width: 20%;
     max-height: 13%;
     padding: 10px 10px;
+    margin-left: 20px;
 } 
 
 #container nav {
@@ -75,7 +79,7 @@ h1,h2 {
     text-transform: uppercase;
     font-size: 85%;
     font-weight: bold;
-    color: #E6B17E;
+    color: #D5DCF9;
     padding: 5px 20px;
     border: 1px solid transparent;
     transition: 1s ease;
@@ -86,7 +90,7 @@ h1,h2 {
 }
 .active {
     background-color: rgba(217,188,169, 0.6);
-    color: #292F36;
+    color: #D5DCF9;
     border: 1px solid transparent; 
 }
 
@@ -144,6 +148,8 @@ h1,h2 {
     display: block;
     align-items: center;
     margin-top: 15%;
+    margin-left: 4%;
+    margin-right: 4%;
 }
 #works  p {
     font-weight: bold;
@@ -177,9 +183,7 @@ h1,h2 {
     display: block;
     height: 150px;
     position: relative;
-    background-color: rgba(217,188,169, 0.7);
-    opacity: 1;
-   
+    background-color: rgba(217,188,169, 0.7);   
 }
 .card i {
     font-size: 200%;
@@ -224,6 +228,7 @@ h1,h2 {
     font-size: 75%;
     font-weight: bolder;
 }
+
 #sayings {
     width: 100%;
     display: block;
@@ -231,6 +236,7 @@ h1,h2 {
     margin-left: 4%;
     margin-right: 4%;  
 }
+
 .persons {
     text-align: center;
     padding: 10px 10px;
@@ -239,22 +245,27 @@ h1,h2 {
     height: 250px; 
     position: relative;
     background-color: rgba(217,188,169, 0.6);
+    box-shadow: 0 0 10px rgba(217,188,169, 0.6);
     opacity: 1;
 }
 #person1 {
     display: inline-block;
+    vertical-align: top;
     width: 23%;
 }
 #person2 {
     display: inline-block;
+    vertical-align: top;
     width: 23%;
 }
 #person3 {
     display: inline-block;
+    vertical-align: top;
     width: 23%;
 }
 #person4 {
     display: inline-block;
+    vertical-align: top;
     width: 23%;
 }
 
@@ -278,6 +289,7 @@ h1,h2 {
     background-position: center;
     background-size: cover;
     border-radius: 50%;
+    margin-bottom: 10px;
 }
 #client2 {
     background-image: url('../images/person2.jpg');
@@ -285,6 +297,7 @@ h1,h2 {
     background-position: center;
     background-size: cover;
     border-radius: 50%;
+    margin-bottom: 10px;
 }
 #client3 {
     background-image: url('../images/person3.jpg');
@@ -292,6 +305,7 @@ h1,h2 {
     background-position: center;
     background-size: cover;
     border-radius: 50%;
+    margin-bottom: 10px;
 }
 #client4 {
     background-image: url('../images/person4.jpg');
@@ -299,6 +313,7 @@ h1,h2 {
     background-position: center;
     background-size: cover;
     border-radius: 50%;
+    margin-bottom: 10px;
 }
 
 /* buisness hours */
@@ -307,7 +322,9 @@ h1,h2 {
     margin-top: 10px;
     transform: translate(0);
     padding-top: 15px;
-    align-items: center;  
+    align-items: center; 
+    margin-left: 4%;
+    margin-right: 4%; 
 }
 #times {
     padding: 10px 10px;
@@ -330,7 +347,7 @@ h1,h2 {
     margin-left: 10px;
     color: #292F36;
 }
-#times > p {
+#times p {
     text-align: left;
     display: block;
     font-weight: 400;
@@ -586,13 +603,13 @@ h1,h2 {
     height: auto;
     margin-left: 5px;
     padding-right: 5px;
-    /* margin-right: 5px; */
+   
 }
+/* accordion menu */
 .accordion {
     width: 45%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     margin: 0 auto;
-    
     overflow: hidden;
     background-color: rgba(217,188,169, 0.6);
 }
@@ -639,11 +656,9 @@ h1,h2 {
 }
 #fittings:checked ~ .accordion-content{
     display: block;
-}
+} 
 
 
-
- 
 
 /* contact page */
 #contact-page {
@@ -763,7 +778,7 @@ h1,h2 {
 }
 
 
-
+/* google map */
 #map {
     clear: both;
     width: 100%;
@@ -776,18 +791,47 @@ h1,h2 {
 
 /* media queries */
 
-/* for screen width less than or equal to 950px */
-@media screen and (max-width: 950px) {
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    #container {
+        max-width: 1870px;
+        
+    }
+    #container #logo img {
+        margin-left: 60px;
+    }
+} 
+/* Large devices (laptops/desktops, 992px and up) */
+
+@media screen and (min-width: 993px) and (max-width: 1199px) {
+    #container {
+        max-width: 1024px;
+        
+    }
+    #container #logo img {
+        margin-left: 20px;
+    }
+    .persons {
+        height: 300px;
+    }
+
+}
+
+/* Medium devices (landscape tablets, 768px and up to 992px) */
+@media screen and (min-width: 768px) and (max-width: 992px) {
     /* global */
     .info {
         font-size: 200%;
         top: 40%;
         justify-content: center;
     }
-    /* header & navigation */
+    .content  h2 {
+        text-align: center;
+    }
     #container #logo img {
         width: 30%;
         max-height: 18%;
+        margin-left: 15px;
     }
     #container nav {
         float: left;
@@ -797,19 +841,22 @@ h1,h2 {
     #container nav li {
         margin-right: 0;
         margin-bottom: 2px;
-        margin-left: -18px;
+        margin-left: -5px;
     }
     #container nav a {
         font-size: 65%;
-        padding: 3px 12px;
+        padding: 2px 8px;
     }
     /* welcome */
     #welcome {
-        height: 40%;
-        top: 25%;
+        height: auto;
+        top: 45%;
         font-size: 90%;
     }
     /* works */
+    #works {
+        margin-bottom: 15px;
+    }
     #left-content,#right-content {
         width: 100%;
         padding: 0;
@@ -821,18 +868,35 @@ h1,h2 {
         clear: both;
         width: 100%;
         padding: 0;
+        margin-bottom: 10px;
+    }
+    .card i {
+        padding-top: 10px;
     }
     /* what people say */
+    .content h2 {
+        float: left;
+        clear: both;
+    }
     #person1,#person2,#person3,#person4 {
         float: left;
         width: 100%;
         margin-bottom: 5px;
     }
-    /* buisness hours */
-    #times,#deviz {
+     /* buisness hours */
+     #times,#deviz {
         width: 100%;
         float: left;
     }
+    /* bug fix */
+    .content #times  > h2 {
+        font-size: 90%;  
+    }
+    /* bug fix */
+    .content #times > div {
+        margin-top: 50px;
+    }
+   
     #how-we-started {
         width: 100%;
         float: left;
@@ -856,37 +920,81 @@ h1,h2 {
     }
     
 }
-/* screen up to 360px */
-@media screen and (max-width: 360px) {
+
+/* @media only screen and (min-width: 768px) {...} */
+
+/* Medium devices (landscape tablets, 768px and below) */
+@media screen and (max-width: 767px) {
+     /* global */
+     .info {
+        font-size: 200%;
+        top: 40%;
+        justify-content: center;
+    }
+    /* header & navigation */
     #container #logo img {
         width: 20%;
         max-height: 12%;
+        margin-left: 10px;
     }
     #container nav {
         float: left;
         margin-top: 15px;
         margin-right: -80px;
-        /* padding: 1% 3%; */
-        /* letter-spacing: 1px; */
     }
     #container nav li {
         margin-right: 0;
         margin-bottom: 2px;
-        margin-left: -10px;
+        margin-left: -5px;
     }
     #container nav a {
-        font-size: 50%;
-        padding: 1px 8px;
+        font-size: 40%;
+        padding: 1px 5px;
     }
     #welcome {
         width: 60%;
         height: 40%;
-        top: 35%;
+        top: 40%;
+    }
+    #welcome > h1 {
+        font-size: 150%;
+    }
+    #welcome  h3 {
+        font-size: 80%;
+    }
+    /* works */
+   
+    #works {
+        margin-bottom: 15px;
+    }
+    #left-content,#right-content {
+        width: 100%;
+        padding: 0;
+        float: left;
+        margin-bottom: 10px;
+    }
+    #center-content {
+        float: left;
+        clear: both;
+        width: 100%;
+        padding: 0;
+        margin-bottom: 10px;
+    }
+    .card i {
+        font-size: 150%;
+        font-weight: bold;
+        color: #292F36;
+        padding-top: 10px;
     }
     #person1,#person2,#person3,#person4 {
         float: left;
         width: 100%;
         margin-bottom: 5px;
+    }
+    /* buisness hours */
+    #times,#deviz {
+        width: 100%;
+        float: left;
     }
     #foot p {
         font-weight: bold;
@@ -894,12 +1002,15 @@ h1,h2 {
         color: #292F36;
         text-align: center;
     }
+
 }
+/* Super Extra Small devices  */
+
 @media screen and (max-width: 280px) {
     #welcome {
         width: 60%;
         height: 35%;
-        top: 30%;
+        top: 60%;
         font-size: 70%;
     }
     #foot p {
