--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ h1,h2 {
     float: left;
     clear: left;
     width: 20%;
-    max-height: 13%;
+    max-height: 5%;
     padding: 10px 10px;
     margin-left: 20px;
 } 
@@ -89,23 +89,15 @@ h1,h2 {
 #container nav a {
     text-decoration: none;
     text-transform: uppercase;
-    /* font-size: 85%; */
     font-weight: bold;
     color: #D5DCF9;
-    /* padding: 5px 20px; */
-    /* border: 1px solid transparent; */
-    /* transition: 1s ease; */
 }
 #container nav a:hover {
     border-bottom: 1px solid #D5DCF9;
-    /* background-color: #725E54; */
     color: #D5DCF9;
 }
 .active {
     border-bottom: 1px solid #D5DCF9;
-    /* background-color: rgba(217,188,169, 0.6); */
-    /* color: #292F36; */
-    /* border: 1px solid transparent;  */
 }
 
 /* main image section */
@@ -117,12 +109,12 @@ h1,h2 {
 }
 #main-image {
     width: 100%;
-    background-image: url('../images/tailor.jpg');
+    background-image: url('../images/tailor.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     z-index: -1;
-    margin-top: 6%;
+    margin-top: 3%;
     height: 600px;
 }
 
@@ -140,7 +132,7 @@ h1,h2 {
     margin-right: 20%;
     position: absolute;
     z-index: 100;
-    top: 500px;
+    top: 400px;
 }
 .mytext {
     width: 100%;
@@ -151,10 +143,14 @@ h1,h2 {
 }
 #welcome > h1 {
     font-size: 280%;
-}
-#welcome > h1,h3 {
-    color: #292F36;
     font-weight: bold;
+}
+#welcome > h2 {
+    font-size: 60%;
+}
+#welcome > h1,h2 {
+    color: #292F36;
+    
 }
 
 /* works section */
@@ -251,7 +247,7 @@ h1,h2 {
     margin-right: 4%;  
 }
 
-.persons {
+.design {
     text-align: center;
     padding: 10px 10px;
     border: 1px solid transparent;
@@ -298,7 +294,7 @@ h1,h2 {
     margin: 0 auto;
 }
 #client1 {
-    background-image: url('../images/person1.jpg');
+    background-image: url('../images/person1.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -306,7 +302,7 @@ h1,h2 {
     margin-bottom: 10px;
 }
 #client2 {
-    background-image: url('../images/person2.jpg');
+    background-image: url('../images/person2.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -314,7 +310,7 @@ h1,h2 {
     margin-bottom: 10px;
 }
 #client3 {
-    background-image: url('../images/person3.jpg');
+    background-image: url('../images/person3.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -322,7 +318,7 @@ h1,h2 {
     margin-bottom: 10px;
 }
 #client4 {
-    background-image: url('../images/person4.jpg');
+    background-image: url('../images/person4.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -345,7 +341,7 @@ h1,h2 {
     margin-top: 10px;
     width: 40%;
     background-color: rgba(217,188,169, 0.7);
-    display: block;
+    box-shadow: 0 0 10px rgba(217,188,169, 0.6);
     height: 300px;
     float: left;
     clear: left;
@@ -370,6 +366,8 @@ h1,h2 {
     margin-left: 10px;
     margin-top: 10px;
 }
+
+
 #deviz {
     float: right;
     clear: right;
@@ -378,10 +376,12 @@ h1,h2 {
     width: 60%;
     height: 300px;
     background-color: #292F36;
-    background-image: url('../images/lamad.png');
+    box-shadow: 0 0 10px rgba(217,188,169, 0.6);
+    background-image: url('../images/lamad.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+
 }
 /* footer */
 #foot {
@@ -397,9 +397,10 @@ h1,h2 {
     font-size: 110%;
     color: #292F36;
     text-align: center;
+    margin-bottom: 30px;
 }
 
-/* go to top icon */
+/* move to top icon */
 #top {
     text-decoration: none;
     align-items: center;
@@ -546,6 +547,9 @@ h1,h2 {
     margin-top: 50px;
     background-color: #fafafa;
     margin-bottom: 50px;
+    margin-left: 4%;
+    margin-right: 4%;
+    justify-content: center;
 }
 
 #wedding-dress,#prom-dress,#pageant-dress,#suits {
@@ -557,26 +561,26 @@ h1,h2 {
 
 }
 #wedding-dress {
-    background-image: url('../images/wedding_dress.jpg');
+    background-image: url('../images/wedding_dress.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 #prom-dress {
-    background-image: url('../images/prom_dress.jpg');
+    background-image: url('../images/prom_dress.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 
 }
 #pageant-dress {
-    background-image: url('../images/pageant_dress.jpg');
+    background-image: url('../images/pageant_dress.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 #suits {
-    background-image: url('../images/men_suit1.jpg');
+    background-image: url('../images/men_suit1.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover; 
@@ -627,10 +631,10 @@ h1,h2 {
     overflow: hidden;
     background-color: rgba(217,188,169, 0.6);
 }
-.accordion__label, .accordion__content{
+.accordion-label, .accordion-content{
     padding: 14px 20px;
 }
-.accordion__label{
+.accordion-label{
     display: block;
     color: #292F36;
     font-weight: bold;
@@ -638,7 +642,7 @@ h1,h2 {
     position: relative;
     transition: background-color 0.1s;
 }
-.accordion__label:hover{
+.accordion-label:hover{
     background-color: rgba(0, 0, 0, 0.1);
 }
 .accordion-content{
@@ -682,12 +686,12 @@ h1,h2 {
 }
 #contact-image {
     width: 100%;
-    background-image: url('../images/tailor.jpg');
+    background-image: url('../images/tailor.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     z-index: -1;
-    margin-top: 6%;
+    margin-top: 3%;
     height: 800px;
 }
 
@@ -757,8 +761,8 @@ h1,h2 {
     border-radius:4px;
 }
 .text-input:hover {
-    background-color: #D5DCF9;
-    color: #292F36;
+    background-color: #292F36;
+    color: #D5DCF9;
 }
 
 #contact-form textarea {
@@ -825,7 +829,19 @@ h1,h2 {
     #container #logo img {
         margin-left: 20px;
     }
-    .persons {
+     /* welcome */
+     #welcome {
+        height: auto;
+        top: 70%;
+        /* font-size: 90%; */
+    }
+    #welcome > h1 {
+        font-size: 180%;
+    }
+    #welcome  h2 {
+        font-size: 80%;
+    }
+    .design {
         height: 300px;
     }
 
@@ -865,7 +881,12 @@ h1,h2 {
     #welcome {
         height: auto;
         top: 40%;
-        font-size: 90%;
+    }
+    #welcome > h1 {
+        font-size: 150%;
+    }
+    #welcome  h2 {
+        font-size: 70%;
     }
     /* works */
     #works {
@@ -934,6 +955,30 @@ h1,h2 {
     #contact-form textarea {
         width: 80%;
     }
+    /* service page */
+    #wedding-dress,#prom-dress {
+        width: 46%;
+        margin-bottom: 50px;
+    }
+    #pageant-dress,#suits {
+        width: 46%;
+        float: left;
+        margin-bottom: 50px;
+    }
+    #newly-married {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    #service-details {
+        float: left;
+        width: 100%;
+        margin-left: 0;
+        padding: 0;
+        margin-bottom: 30px;
+    }
+    .accordion {
+        width: 100%;
+    }
     
 }
 
@@ -948,7 +993,7 @@ h1,h2 {
     }
     /* header & navigation */
     #container #logo img {
-        width: 20%;
+        width: 30%;
         max-height: 12%;
         margin-left: 10px;
     }
@@ -974,8 +1019,8 @@ h1,h2 {
     #welcome > h1 {
         font-size: 150%;
     }
-    #welcome  h3 {
-        font-size: 80%;
+    #welcome  h2 {
+        font-size: 55%;
     }
     /* works */
    
@@ -1036,10 +1081,51 @@ h1,h2 {
     #news h2 {
         font-size: 90%;
     }
+
+    /* contact page */
+    #contact,#contact-form {
+        float: left;
+        width: 100%;
+    }
+    .text-input {
+        width: 80%;
+    }
+    #contact-form textarea {
+        width: 80%;
+    }
+
+     /* service page */
+     #wedding-dress,#prom-dress {
+        width: 46%;
+        margin-bottom: 50px;
+    }
+    #pageant-dress,#suits {
+        width: 46%;
+        float: left;
+        margin-bottom: 50px;
+        /* clear: both; */
+    }
+    #newly-married {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    #service-details {
+        float: left;
+        width: 100%;
+        margin-left: 0;
+        padding: 0;
+        margin-bottom: 30px;
+    }
+    .accordion {
+        width: 100%;
+    }
 }
 /* Super Extra Small devices  */
 
 @media screen and (max-width: 360px) {
+    #container #logo img {
+        width: 42%;
+    }
     #welcome {
         width: 60%;
         height: 35%;
@@ -1068,5 +1154,43 @@ h1,h2 {
     }
     #news h2 {
         font-size: 90%;
+    }
+
+    /* contact page */
+    #contact,#contact-form {
+        float: left;
+        width: 100%;
+    }
+    .text-input {
+        width: 80%;
+    }
+    #contact-form textarea {
+        width: 80%;
+    }
+
+     /* service page */
+     #wedding-dress,#prom-dress,#pageant-dress,#suits {
+        float: left;
+        width: 100%;
+        margin-bottom: 50px;
+    }
+    .content {
+        margin-left: 1%;
+        margin-right: 1%;
+        padding: 3px 3px;
+    }
+    #newly-married {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    #service-details {
+        float: left;
+        width: 100%;
+        margin-left: 0;
+        padding: 0;
+        margin-bottom: 30px;
+    }
+    .accordion {
+        width: 100%;
     }
 }
