--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,13 +101,13 @@ h1,h2 {
 }
 
 /* main image section */
-.tailor {
+#main-image {
     width: 100%;
     height: 600px;
     display: block;
     position: relative;
 }
-#main-image {
+#tailor-image {
     width: 100%;
     background-image: url('../images/tailor.webp');
     background-repeat: no-repeat;
@@ -156,7 +156,6 @@ h1,h2 {
 /* works section */
 #works {
     display: block;
-    align-items: center;
     margin-top: 5%;
     margin-left: 4%;
     margin-right: 4%;
@@ -242,7 +241,6 @@ h1,h2 {
 #sayings {
     width: 100%;
     display: block;
-    align-items: center;
     margin-left: 4%;
     margin-right: 4%;  
 }
@@ -455,13 +453,14 @@ h1,h2 {
 /* about page */
 #about {
     width: 100%;
-    display: block;
     align-items: center;
+    margin-bottom: 150px;
 }
+
 #about .content h2 {
     font-size: 180%;
     font-weight: bold;
-    text-align: left;
+    text-align: justify;
 }
 #how-we-started {
     width: 50%;
@@ -470,13 +469,24 @@ h1,h2 {
     clear: left;
     margin: 0 auto;
     padding: 8px 8px;
-    margin-bottom: 20px;
-   
+    line-height: 1.6;
+    font-size: 1.2em;
+    margin-bottom: 20px; 
 }
+
+#how-we-started p::first-letter {
+    text-transform: capitalize;
+    font-size: 110%;
+    font-weight: bold;
+}
+
 #group {
     width: 50%;
-    height: 280px;
+    height: 400px;
     float: right;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: rgba(217,188,169, 0.7);
     background-image: url('../images/group.jpg');
     background-repeat: no-repeat;
@@ -1082,18 +1092,7 @@ h1,h2 {
         font-size: 90%;
     }
 
-    /* contact page */
-    #contact,#contact-form {
-        float: left;
-        width: 100%;
-    }
-    .text-input {
-        width: 80%;
-    }
-    #contact-form textarea {
-        width: 80%;
-    }
-
+    
      /* service page */
      #wedding-dress,#prom-dress {
         width: 46%;
@@ -1103,7 +1102,6 @@ h1,h2 {
         width: 46%;
         float: left;
         margin-bottom: 50px;
-        /* clear: both; */
     }
     #newly-married {
         width: 100%;
@@ -1119,42 +1117,6 @@ h1,h2 {
     .accordion {
         width: 100%;
     }
-}
-/* Super Extra Small devices  */
-
-@media screen and (max-width: 360px) {
-    #container #logo img {
-        width: 42%;
-    }
-    #welcome {
-        width: 60%;
-        height: 35%;
-        top: 60%;
-        font-size: 70%;
-    }
-    #foot p {
-        font-size: 60%;
-        margin-bottom: 3px;
-    }
-     /* about page */
-     #how-we-started {
-        width: 100%;
-        float: left;
-        text-align: center;
-        padding: 5px 5px;
-        margin-bottom: 25px;
-    }
-    #group {
-        width:100%;
-        float: left;
-    }
-    /* news letter */
-    #news {
-        height: 100px;
-    }
-    #news h2 {
-        font-size: 90%;
-    }
 
     /* contact page */
     #contact,#contact-form {
@@ -1166,6 +1128,57 @@ h1,h2 {
     }
     #contact-form textarea {
         width: 80%;
+    }
+}
+/* Super Extra Small devices  */
+
+@media screen and (max-width: 360px) {
+    #container #logo img {
+        width: 42%;
+    }
+    
+    #welcome {
+        width: 60%;
+        height: 35%;
+        top: 60%;
+        font-size: 70%;
+    }
+   
+     /* about page */
+     
+     #how-we-started {
+        width: 100%;
+        float: left;
+        text-align: center;
+        padding: 5px 5px;
+        margin-bottom: 25px;
+    }
+    #about .content h2 {
+        text-align: right;
+    }
+    #how-we-started > p {
+        text-align: left;
+        margin-right: -70px;
+        margin-left: 20px;
+    }
+    
+    #group {
+        width:100%;
+        float: left;
+        max-width: 100%;
+        max-height: 100%;
+        overflow: auto;
+    }
+    /* .content #group {
+        display: block;
+        margin: auto;
+    } */
+    /* news letter */
+    #news {
+        height: 100px;
+    }
+    #news h2 {
+        font-size: 90%;
     }
 
      /* service page */
@@ -1192,5 +1205,23 @@ h1,h2 {
     }
     .accordion {
         width: 100%;
+    }
+
+     /* contact page */
+     #contact,#contact-form {
+        float: left;
+        width: 100%;
+    }
+    .text-input {
+        width: 80%;
+    }
+    #contact-form textarea {
+        width: 80%;
+    }
+
+
+    #foot p {
+        font-size: 60%;
+        margin-bottom: 3px;
     }
 }
