--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -813,8 +813,18 @@ h1,h2 {
     margin: 0 auto;
 }
 #map-wrapper {
+    height: 710px;
     width: 100%;
 
+}
+#map-wrapper h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+#map-wrapper iframe {
+ width: 100%;
+ height: 100%;
+ border: 0;
 }
 
 /* media queries */
