--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -855,6 +855,12 @@ h1,h2 {
     .design {
         height: 300px;
     }
+    /* contact */
+    #contact-page {
+        width: 100%;
+        align-items: center;
+        margin-top: 120px;
+    }
 
 }
 
