--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -690,7 +690,7 @@ h1,h2 {
 #contact-page {
     width: 100%;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 250px;
 }
 
 
@@ -856,11 +856,11 @@ h1,h2 {
         height: 300px;
     }
     /* contact */
-    #contact-page {
+    /* #contact-page {
         width: 100%;
         align-items: center;
         margin-top: 120px;
-    }
+    } */
 
 }
 
