--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,17 @@ body {
 
 /* Global */
 
+/* @media screen {
+	div #preloader {
+		position: absolute;
+		left: -9999px;
+		top:  -9999px;
+		}
+	div #preloader img {
+		display: block;
+		}
+	}
+     */
 h1,h2 {
     font-family: Oswald,sans-serif;
     text-transform: uppercase;
