--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -842,7 +842,15 @@ h1,h2 {
         margin-top: 40%; 
     }
     #sayings {
-        margin-top: 100px; 
+        margin-top: 80px; 
+    }
+    /* about */
+    #about {
+        margin-top: 300px;
+    }
+    /* services */
+    #services {
+        margin-top: 650px;
     }
     
 } 
