Add style correction to services page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -846,10 +846,10 @@ h1,h2 {
     }
     /* about */
     #about {
-        margin-top: 500px;
+        margin-top: 650px;
     }
     /* services */
-    #services {
+    #service {
         margin-top: 650px;
     }
     /* contact */
