--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ h2 {
 
 .container {
     display: block;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     width: 100%;
     background-color: #292F36;
     border-bottom: 2px solid #7C4E29;
@@ -47,6 +47,7 @@ h2 {
     position: fixed;
     z-index: 800;
     top: 0;
+    left: 0;
     overflow: hidden;
 
 }
