--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,8 +120,9 @@ h2 {
 #main-image {
     width: 100%;
     height: 600px;
-    display: block;
-    margin: 0 auto;
+    /* display: block;
+    margin: 0 auto; */
+    z-index: 0;
     position: relative;
 }
 
